tests/mypy/mypy_wrap_function_wrapper_t8.out
tests/mypy/mypy_wrap_function_wrapper_t8.py:26: error: Argument 2 to "wrap_function_wrapper" has incompatible type "None"; expected "str"  [arg-type]
Found 1 error in 1 file (checked 1 source file)
